--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,10 @@
 {
   "version": 2,
+  "builds": [{
+    "src": "./index.js",
+    "use": "@vercel/n"
+  }]
+  ,
   "routes": [
     {
       "src": "/(.*)",
